media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp
@@ -376,7 +376,7 @@ Warn(JSContext* aCx, const nsCString& aMsg) {
  * In JS, an RTCConfiguration looks like this:
  *
  * { "iceServers": [ { url:"stun:23.21.150.121" },
- *                   { url:"turn:user@turn.example.org", credential:"mypass"} ] }
+ *                   { url:"turn:turn.example.org", credential:"mypass", "username"} ] }
  *
  * This function converts an already-validated jsval that looks like the above
  * into an IceConfiguration object.
@@ -416,17 +416,8 @@ PeerConnectionImpl::ConvertRTCConfiguration(const JS::Value& aSrc,
     nsAutoCString spec;
     rv = url->GetSpec(spec);
     NS_ENSURE_SUCCESS(rv, rv);
-    if (!server.mCredential.IsEmpty()) {
-      // TODO(jib@mozilla.com): Support username, credentials & TURN servers
-      Warn(aCx, nsPrintfCString(ICE_PARSING
-          ": Credentials not yet implemented. Omitting \"%s\"", spec.get()));
-      continue;
-    }
-    if (isTurn || isTurns) {
-      Warn(aCx, nsPrintfCString(ICE_PARSING
-          ": TURN servers not yet supported. Treating as STUN: \"%s\"", spec.get()));
-    }
-    // TODO(jib@mozilla.com): Revisit once nsURI supports host and port on STUN
+
+    // TODO(jib@mozilla.com): Revisit once nsURI has STUN host+port (Bug 833509)
     int32_t port;
     nsAutoCString host;
     {
@@ -443,13 +434,26 @@ PeerConnectionImpl::ConvertRTCConfiguration(const JS::Value& aSrc,
       if (!hostLen) {
         return NS_ERROR_FAILURE;
       }
+      if (hostPos > 1)  /* The username was removed */
+        return NS_ERROR_FAILURE;
       path.Mid(host, hostPos, hostLen);
     }
     if (port == -1)
       port = (isStuns || isTurns)? 5349 : 3478;
-    if (!aDst->addServer(host.get(), port)) {
-      Warn(aCx, nsPrintfCString(ICE_PARSING
-          ": FQDN not yet implemented (only IP-#s). Omitting \"%s\"", spec.get()));
+
+    if (isTurn || isTurns) {
+      NS_ConvertUTF16toUTF8 credential(server.mCredential);
+      NS_ConvertUTF16toUTF8 username(server.mUsername);
+
+      if (!aDst->addTurnServer(host.get(), port,
+                               username.get(),
+                               credential.get())) {
+        return NS_ERROR_FAILURE;
+      }
+    } else {
+      if (!aDst->addStunServer(host.get(), port)) {
+        return NS_ERROR_FAILURE;
+      }
     }
   }
 #endif
@@ -523,9 +527,10 @@ PeerConnectionImpl::Initialize(IPeerConnectionObserver* aObserver,
     IceConfiguration ic;
     res = ConvertRTCConfiguration(*aRTCConfiguration, &ic, aCx);
     NS_ENSURE_SUCCESS(res, res);
-    res = mMedia->Init(ic.getServers());
+    res = mMedia->Init(ic.getStunServers(), ic.getTurnServers());
   } else {
-    res = mMedia->Init(aConfiguration->getServers());
+    res = mMedia->Init(aConfiguration->getStunServers(),
+                       aConfiguration->getTurnServers());
   }
   if (NS_FAILED(res)) {
     CSFLogError(logTag, "%s: Couldn't initialize media object", __FUNCTION__);
