media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.h
@@ -68,19 +68,37 @@ private:
 class IceConfiguration
 {
 public:
-  bool addServer(const std::string& addr, uint16_t port)
+  bool addStunServer(const std::string& addr, uint16_t port)
   {
     NrIceStunServer* server(NrIceStunServer::Create(addr, port));
     if (!server) {
       return false;
     }
-    addServer(*server);
+    addStunServer(*server);
     return true;
   }
-  void addServer(const NrIceStunServer& server) { mServers.push_back (server); }
-  const std::vector<NrIceStunServer>& getServers() const { return mServers; }
+  bool addTurnServer(const std::string& addr, uint16_t port,
+                     const std::string& username,
+                     const std::string& pwd)
+  {
+    // TODO(ekr@rtfm.com): Need support for SASLprep for
+    // username and password. Bug # ???
+    std::vector<unsigned char> password(pwd.begin(), pwd.end());
+
+    NrIceTurnServer* server(NrIceTurnServer::Create(addr, port, username, password));
+    if (!server) {
+      return false;
+    }
+    addTurnServer(*server);
+    return true;
+  }
+  void addStunServer(const NrIceStunServer& server) { mStunServers.push_back (server); }
+  void addTurnServer(const NrIceTurnServer& server) { mTurnServers.push_back (server); }
+  const std::vector<NrIceStunServer>& getStunServers() const { return mStunServers; }
+  const std::vector<NrIceTurnServer>& getTurnServers() const { return mTurnServers; }
 private:
-  std::vector<NrIceStunServer> mServers;
+  std::vector<NrIceStunServer> mStunServers;
+  std::vector<NrIceTurnServer> mTurnServers;
 };
 
 class PeerConnectionWrapper;
