dom/webidl/RTCConfiguration.webidl
@@ -7,6 +7,7 @@
 dictionary RTCIceServer {
     DOMString  url;
     DOMString? credential = null;
+    DOMString? username = null;
 };
 
 dictionary RTCConfiguration {
